with Password Safe version 3.08.04. For a short description of Password
Safe, please see the accompanying README.txt file. For more
information on the product and the project, please visit
http://passwordsafe.sourceforge.net. Details about changes to previous
releases may be found in the file ChangeLog.txt.

Bugs fixed in 3.08.04
=====================
[] Protect user from losing entries in case of non-unique uuids in read database.
[Open Discussion] Compare fixed so that 'X' indicating differences are
in the correct columns and data copied to clipboard ends in CRLF not just LF
[1739364] Window location issue fixed

New Features for 3.08.04
========================
[1739979] Add URL column to flattened list

Changes to Existing Features in 3.08.04
=======================================
[1732163] Date/time displayed throughout in the users "Short Date" format.

Bugs fixed in 3.08.03
=====================
[1735290] Configuration file works with non-ASCII user and host
names.

New Features for 3.08.03
========================
[] Use STL library in the core. Hopefully transparent to the user but a
performance improvement.

Bugs fixed in 3.08.02
=====================
[1733911] File mode encryption/decryption (-d/-e) works again

Bugs fixed in 3.08.01
=====================
[] Fix random showing of user and passwords if started in silent mode
[] Fix Edit and View in main menu not being reset after open after close
[1727871] Found items remain highlighted if another entry selected - note
found items now made bold rather than highlighted
[1728612] Column sort arrows, in Flattened List mode, correctly removed
[1728945] Importing a subset of text data now fixed
[1728945] Version 2.x databases now read correctly
[1733740] '-s' option no longer causes sporadic display of passwords
in tree view.

New Features for 3.08.01
========================
[] Implement "Advanced" option for Find


Bugs fixed in 3.08
==================