@@ -10,10 +10,14 @@ releases may be found in the file ChangeLog.txt.
 
 Bugs fixed in 3.08.04
 =====================
-[] Protect user from losing entries in case of non-unique uuids in read database.
+[] A note on possible problems with the autotype functionality and
+some 3rd party popup-blockers. Thanks to mrttoo for the heads-up.
+[] Protect user from losing entries in case of non-unique uuids in
+read database. 
 [Open Discussion] Compare fixed so that 'X' indicating differences are
 in the correct columns and data copied to clipboard ends in CRLF not just LF
 [1739364] Window location issue fixed
+[1738477, 1630400] Now works correctly under Windows 98 (again).
 
 New Features for 3.08.04
 ========================
